#1119: Added COMMAND_SECURITY_DEFINITION to GetSymbolPositions UC